plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'com.github.johnrengelman.shadow' version '8.1.1'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	maven { url = uri("https://packages.graalvm.org/maven") }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"my-qol-scripts" {
			sourceSet sourceSets.client
		}
	}
}

project.ext.lwjglVersion = "3.3.4"
project.ext.lwjglNatives = "natives-windows"
project.ext.graalVersion = "24.2.1"


dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	shadow(implementation "org.graalvm.sdk:graal-sdk:${graalVersion}")
	shadow(implementation "org.graalvm.truffle:truffle-api:${graalVersion}")
	shadow(implementation "org.graalvm.js:js-language:${graalVersion}")
	shadow(implementation "org.graalvm.js:js-scriptengine:${graalVersion}")

	shadow(implementation "net.bytebuddy:byte-buddy:1.17.6")
	shadow(implementation "net.bytebuddy:byte-buddy-agent:1.17.6")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

shadowJar {
	configurations = [project.configurations.shadow]
	archiveClassifier.set("dev")
	from sourceSets.client.output

	mergeServiceFiles()

	relocate 'org.graalvm', 'net.me.libs.graalvm'
	relocate 'net.bytebuddy', 'net.me.libs.bytebuddy'
}
remapJar {
	dependsOn(shadowJar)
	inputFile = tasks.shadowJar.archiveFile
}
